# docs/swagger.json
@@ -10,6 +10,11 @@
       "url": "http://localhost:3000/api"
     }
   ],
+  "security": [
+    {
+      "BearerAuth": []
+    }
+  ],
   "paths": {
     "/auth/authenticate": {
       "post": {
@@ -196,6 +201,13 @@
     }
   },
   "components": {
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
     "schemas": {
       "UserReg": {
         "type": "object",
