# src/routes/userRoutes.ts
@@ -8,9 +8,9 @@ const router = Router();
 
 // Определяем маршруты для пользователей
 router.get('/', authMiddleware, userController.getAllUserController); // Получить всех пользователей
-router.get('/:id', userController.getUserByIdController); // Получить пользователя по ID
-router.post('/', userController.createUserController);     // Создать нового пользователя
-router.put('/', userController.updateUserController);     // Создать нового пользователя
-router.delete('/:id', userController.deleteUserController); // удалить пользователя по ID
+router.get('/:id', authMiddleware, userController.getUserByIdController); // Получить пользователя по ID
+router.post('/', authMiddleware, userController.createUserController);     // Создать нового пользователя
+router.put('/', authMiddleware, userController.updateUserController);     // Создать нового пользователя
+router.delete('/:id', authMiddleware, userController.deleteUserController); // удалить пользователя по ID
 
 export default router;
